--- a/conf.local/antialias.conf
+++ b/conf.local/antialias.conf
@@ -24,22 +24,23 @@
   <!-- MS Font AA -->
   <match target="pattern">
     <test name="foundry">
-<!--
       <string>monotype</string>
--->
       <string>microsoft</string>
     </test>
+	<test name="family" compare="not_eq">
+	  <string>Microsoft YaHei</string>
+	</test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
     </edit>
 	<edit name="autohint" mode="assign">
-	  <bool>false</bool>
+	  <bool>true</bool>
 	</edit>
     <edit name="hinting" mode="assign">
-      <bool>true</bool>
+      <bool>false</bool>
     </edit>
     <edit name="hintstyle" mode="assign">
-      <const>hintfull</const>
+      <const>hintnone</const>
     </edit>
     <edit name="globaladvance" mode="assign">
       <bool>false</bool>
@@ -130,6 +131,9 @@
   <!-- Monaco -->
   <match target="pattern">
 	<test name="family" compare="contains">
+	  <string>Ubuntu</string>
+	  <string>Ubuntu Mono</string>
+	  <string>Ubuntu Condensed</string>
 	  <string>Monaco</string>
 	</test>
     <edit name="antialias" mode="assign">
@@ -142,7 +146,7 @@
       <bool>false</bool>
     </edit>
     <edit name="hintstyle" mode="assign">
-      <const>hintnone</const>
+      <const>hintfull</const>
     </edit>
     <edit name="globaladvance" mode="assign">
       <bool>false</bool>
@@ -152,10 +156,7 @@
   <!-- DejaVu and Bitstream -->
   <match target="pattern">
     <test name="family" compare="contains">
-      <string>Bitstream Vera</string>
 	  <string>Cantarell</string>
-      <string>DejaVu</string>
-	  <string>Droid</string>
       <string>Iwona</string>
 	  <string>Nimbus</string>
     </test>
@@ -166,7 +167,7 @@
       <bool>true</bool>
     </edit>
     <edit name="hingting" mode="assign">
-      <bool>true</bool>
+      <bool>false</bool>
     </edit>
     <edit name="hintstyle" mode="assign">
       <const>hintfull</const>
@@ -286,7 +287,7 @@
       <const>hintfull</const>
     </edit>
     <edit name="autohint" mode="assign">
-      <bool>false</bool>
+      <bool>true</bool>
     </edit>
     <edit name="globaladvance" mode="assign">
       <bool>false</bool>
