--- a/conf.local/artificial.conf
+++ b/conf.local/artificial.conf
@@ -114,14 +114,15 @@
 
   <match target="pattern">
     <test qual="any" name="family">
-	  <string>Andale Mono</string>
 	  <string>Aerial Mono</string>
+	  <string>Andale Mono</string>
       <string>Bitstream Vera Sans Mono</string>
 	  <string>Courier New</string>
       <string>DejaVu Sans Mono</string>
 	  <string>Droid Sans Mono</string>
       <string>Luxi Mono</string>
 	  <string>Monaco</string>
+	  <string>Ubuntu Mono</string>
     </test>
     <edit name="lang" mode="assign_replace">
       <string>en</string>
@@ -132,10 +133,10 @@
   <!-- to compute correct PIXELSIZE, use: px = pt * dpi / 72 -->
   <match target="font">
     <test name="pixelsize" compare="less">
-      <double>10.66</double>
+      <double>11.56</double>
     </test>
     <edit name="pixelsize" mode="assign">
-      <double>10.66</double>
+      <double>11.56</double>
     </edit>
   </match>
 
