--- a/conf.local/spacing.conf
+++ b/conf.local/spacing.conf
@@ -6,14 +6,15 @@
 
   <match target="scan">
 	<test name="family">
-      <string>Andale Mono</string>
 	  <string>Aerial Mono</string>
+      <string>Andale Mono</string>
       <string>Bitstream Vera Sans Mono</string>
 	  <string>Courier New</string>
       <string>DejaVu Sans Mono</string>
       <string>Droid Sans Mono</string>
 	  <string>Luxi Mono</string>
       <string>Monaco</string>
+	  <string>Ubuntu Mono</string>
     </test>
     <edit name="spacing">
 	  <int>100</int>
