--- a/conf.local/substitutes.conf
+++ b/conf.local/substitutes.conf
@@ -70,24 +70,6 @@
   <!-- Latin fonts -->
   <match target="pattern">
     <test name="family" qual="any">
-      <string>Lucida Grande</string>
-    </test>
-    <edit name="family" mode="assign">
-      <string>Iwona</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test name="family" qual="any">
-      <string>Tahoma</string>
-    </test>
-    <edit name="family" mode="assign">
-      <string>Verdana</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test name="family" qual="any">
       <string>DejaVu Sans</string>
     </test>
     <test name="pixelsize" compare="more_eq">
@@ -119,6 +101,18 @@
     </test>
     <edit name="family" mode="assign">
       <string>Iwona Condensed</string>
+    </edit>
+  </match>
+
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>Ubuntu</string>
+    </test>
+    <test name="pixelsize" compare="more_eq">
+      <double>18</double>
+    </test>
+    <edit name="family" mode="assign">
+      <string>Ubuntu Condensed</string>
     </edit>
   </match>
 
