--- a/conf.local/last.conf
+++ b/conf.local/last.conf
@@ -15,7 +15,7 @@
       <string>monospace</string>
     </test>
     <edit name="family" mode="append_last">
-      <string>sans-serif</string>
+      <string>Droid Sans</string>
     </edit>
   </match>
 
