just stay for a while.

--- a/conf.local/antialias.conf
+++ b/conf.local/antialias.conf
@@ -25,10 +25,6 @@
   <match target="pattern">
     <test name="foundry">
       <string>monotype</string>
-      <string>microsoft</string>
-    </test>
-	<test name="family" compare="not_eq">
-	  <string>Microsoft YaHei</string>
 	</test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
@@ -37,104 +33,20 @@
 	  <bool>true</bool>
 	</edit>
     <edit name="hinting" mode="assign">
-      <bool>false</bool>
+      <bool>true</bool>
     </edit>
     <edit name="hintstyle" mode="assign">
       <const>hintnone</const>
     </edit>
-    <edit name="globaladvance" mode="assign">
-      <bool>false</bool>
-    </edit>
   </match>
-
-  <!-- CJK fonts -->
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>AR PL UMing CN</string>
-      <string>AR PL UMing HK</string>
-      <string>AR PL UMing TW</string>
-      <string>AR PL UMing TW MBE</string>
-    </test>
-    <test name="pixelsize" compare="less_eq">
-      <double>6</double>
-    </test>
-    <test name="pixelsize" compre="more_eq">
-      <double>16</double>
-    </test>
-    <edit name="antialias" mode="assign">
-      <bool>true</bool>
-    </edit>
-    <edit name="hinting" mode="assign">
-      <bool>true</bool>
-    </edit>
-    <edit name="autohint" mode="assign">
-      <bool>false</bool>
-    </edit>
-    <edit name="hintstyle" mode="assign">
-      <const>hintfull</const>
-    </edit>
-    <edit name="globaladvance" mode="assign">
-      <bool>false</bool>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>AR PL UMing CN</string>
-      <string>AR PL UMing HK</string>
-      <string>AR PL UMing TW</string>
-      <string>AR PL UMing TW MBE</string>
-    </test>
-    <test name="pixelsize" compare="more">
-      <double>6</double>
-    </test>
-    <test name="pixelsize" compre="less">
-      <double>16</double>
-    </test>
-    <edit name="antialias" mode="assign">
-      <bool>false</bool>
-    </edit>
-    <edit name="hinting" mode="assign">
-      <bool>false</bool>
-    </edit>
-    <edit name="autohint" mode="assign">
-      <bool>true</bool>
-    </edit>
-    <edit name="globaladvance" mode="assign">
-      <bool>false</bool>
-    </edit>
-  </match>
-  <!-- CJK fonts -->
 
   <!-- Courier New AA -->
   <match target="pattern" >
     <test name="foundry" >
-      <string>Adobe</string>
+      <string>microsoft</string>
     </test>
-    <edit name="antialias" mode="assign">
-      <bool>true</bool>
-    </edit>
-    <edit name="autohint" mode="assign">
-      <bool>true</bool>
-    </edit>
-    <edit name="hinting" mode="assign">
-      <bool>false</bool>
-    </edit>
-    <edit name="hintstyle" mode="assign">
-      <const>hintnone</const>
-    </edit>
-    <edit name="globaladvance" mode="assign">
-      <bool>false</bool>
-    </edit>
-  </match>
-
-  <!-- Monaco -->
-  <match target="pattern">
-	<test name="family" compare="contains">
-	  <string>Ubuntu</string>
-	  <string>Ubuntu Mono</string>
-	  <string>Ubuntu Condensed</string>
-	  <string>Monaco</string>
+	<test name="family" compare="not_eq">
+	  <string>Microsoft YaHei</string>
 	</test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
@@ -146,58 +58,7 @@
       <bool>false</bool>
     </edit>
     <edit name="hintstyle" mode="assign">
-      <const>hintfull</const>
-    </edit>
-    <edit name="globaladvance" mode="assign">
-      <bool>false</bool>
-    </edit>
-  </match>
-
-  <!-- DejaVu and Bitstream -->
-  <match target="pattern">
-    <test name="family" compare="contains">
-	  <string>Cantarell</string>
-      <string>Iwona</string>
-	  <string>Nimbus</string>
-    </test>
-    <edit name="antialias" mode="assign">
-      <bool>true</bool>
-    </edit>
-    <edit name="autohint" mode="assign">
-      <bool>true</bool>
-    </edit>
-    <edit name="hingting" mode="assign">
-      <bool>false</bool>
-    </edit>
-    <edit name="hintstyle" mode="assign">
-      <const>hintfull</const>
-    </edit>
-    <edit name="globaladvance" mode="assign">
-      <bool>false</bool>
-    </edit>
-  </match>
-
-  <!-- Luxi -->
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Luxi Sans</string>
-	  <string>Luxi Serif</string>
-	  <string>Luxi Mono</string>
-    </test>
-    <edit name="antialias" mode="assign">
-      <bool>true</bool>
-    </edit>
-    <edit name="autohint" mode="assign">
-      <bool>true</bool>
-    </edit>
-    <edit name="hingting" mode="assign">
-      <bool>true</bool>
-    </edit>
-    <edit name="hintstyle" mode="assign">
-      <const>hintfull</const>
-    </edit>
-    <edit name="globaladvance" mode="assign">
-      <bool>false</bool>
+      <const>hintnone</const>
     </edit>
   </match>
 
@@ -211,9 +72,6 @@
 	  <string>文泉驿等宽正黑</string>
 	  <string>文泉驛等寬正黑</string>
     </test>
-    <edit name="spacing">
-      <int>0</int>
-    </edit>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
     </edit>
@@ -221,10 +79,10 @@
       <bool>true</bool>
     </edit>
     <edit name="hintstyle" mode="assign">
-      <const>hintnone</const>
+      <const>hintfull</const>
     </edit>
     <edit name="autohint" mode="assign">
-      <bool>false</bool>
+      <bool>true</bool>
     </edit>
     <edit name="rh_prefer_bitmaps" mode="assign">
       <bool>false</bool>
@@ -232,9 +90,15 @@
     <edit name="embeddedbitmap" mode="assign">
       <bool>false</bool>
     </edit>
-    <edit name="globaladvance" mode="assign">
-      <bool>false</bool>
+	<edit name="rgba" mode="assign">
+	  <const>none</const>
+	</edit>
+    <edit name="spacing">
+      <int>0</int>
     </edit>
+	<edit name="globaladvance">
+	  <bool>false</bool>
+	</edit>
   </match>
 
   <match target="pattern">
@@ -249,8 +113,29 @@
     <edit name="antialias" mode="assign">
       <bool>true</bool>
     </edit>
-    <edit name="spacing" mode="assign">
-      <int>0</int>
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintfull</const>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="rgba" mode="assign">
+      <const>none</const>
+    </edit>
+  </match>
+
+  <!-- WQY -->
+
+  <!-- Microsoft YaHei -->
+  <match target="pattern">
+    <test name="family" compare="contains">
+	  <string>Microsoft YaHei</string>
+    </test>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
     </edit>
     <edit name="hinting" mode="assign">
       <bool>true</bool>
@@ -261,22 +146,15 @@
     <edit name="autohint" mode="assign">
       <bool>false</bool>
     </edit>
-    <edit name="globaladvance" mode="assign">
-      <bool>false</bool>
-    </edit>
   </match>
-  <!-- WQY -->
 
-  <!-- Microsoft YaHei -->
-
+  <!-- huawen song & kai -->
   <match target="pattern">
-    <test name="family" compare="contains">
-      <string>SimHei</string>
-	  <string>Microsoft YaHei</string>
-      <string>黑体</string>
-      <string>黑體</string>
-	  <string>微软雅黑</string>
-    </test>
+	<test name="family" compare="contains">
+	  <string>STFangsong</string>
+	  <string>STKaiti</string>
+	  <string>STSong</string>
+	</test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
     </edit>
@@ -289,24 +167,43 @@
     <edit name="autohint" mode="assign">
       <bool>true</bool>
     </edit>
-    <edit name="globaladvance" mode="assign">
-      <bool>false</bool>
-    </edit>
   </match>
 
-  <!-- Microsoft YaHei -->
-
-  <!-- Droid Sans Fallback -->
+  <!-- stheiti & stxihei -->
   <match target="pattern">
     <test name="family" compare="contains">
+      <string>STHeiti</string>
+      <string>STXihei</string>
+	  <string>STZhongsong</string>
+    </test>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintnone</const>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>false</bool>
+    </edit>
+	<edit name="rgba" mode="assign">
+	  <const>none</const>
+	</edit>
+  </match>
+
+  <!-- droid -->
+  <match target="pattern">
+    <test name="family">
 	  <string>Droid Sans</string>
-	  <string>Droid Sans Arabic</string>
-      <string>Droid Sans Fallback</string>
+	  <string>Droid Serif</string>
+	  <string>Droid Sans Mono</string>
+	  <string>Droid Sans Fallback</string>
 	  <string>Droid Sans Hebrew</string>
 	  <string>Droid Sans Japanese</string>
 	  <string>Droid Sans Thai</string>
-	  <string>Droid Sans Mono</string>
-	  <string>Droid Serif</string>
+	  <string>Droid Sans Arabic</string>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
@@ -318,21 +215,57 @@
       <const>hintfull</const>
     </edit>
     <edit name="autohint" mode="assign">
-      <bool>false</bool>
-    </edit>
-    <edit name="globaladvance" mode="assign">
-      <bool>false</bool>
+      <bool>true</bool>
     </edit>
   </match>
-  <!-- Droid Sans Fallback -->
 
-  <!-- Firefly Truetype Font -->
+  <!-- bitstream & dejavu -->
+  <match target="pattern">
+    <test name="family">
+      <string>Bitstream Vera Sans</string>
+      <string>Bitstream Vera Serif</string>
+      <string>Bitstream Vera Sans Mono</string>
+      <string>DejaVu Sans</string>
+      <string>DejaVu Serif</string>
+      <string>DejaVu Sans Mono</string>
+    </test>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintfull</const>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>true</bool>
+    </edit>
+  </match>
+
+  <!-- lucida grande -->
   <match target="pattern">
     <test name="family" compare="contains">
-      <string>AR PL UKai CN</string>
-	  <string>AR PL UKai HK</string>
-	  <string>AR PL UKai TW</string>
-	  <string>AR PL UKai TW MBE</string>
+      <string>Lucida Grande</string>
+    </test>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintfull</const>
+    </edit>
+  </match>
+
+  <!-- monaco -->
+  <match target="pattern">
+    <test name="family" compare="contains">
+      <string>Monaco</string>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
@@ -344,12 +277,75 @@
       <bool>false</bool>
     </edit>
     <edit name="hintstyle" mode="assign">
-      <const>hintfull</const>
-    </edit>
-    <edit name="globaladvance" mode="assign">
-      <bool>false</bool>
+      <const>hintnone</const>
     </edit>
   </match>
-  <!-- Firefly Truetype Font -->
+
+  <!-- Ubuntu -->
+  <match target="pattern">
+    <test name="family" compare="contains">
+      <string>Ubuntu</string>
+	  <string>Ubuntu Condensed</string>
+	  <string>Ubuntu Light</string>
+	  <string>Ubuntu Mono</string>
+    </test>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>false</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintnone</const>
+    </edit>
+  </match>
+
+  <!-- hiragino -->
+  <match target="pattern">
+    <test name="family" compare="contains">
+	  <string>Hiragino Sans GB</string>
+	  <string>Hiragino Sans GB W3</string>
+    </test>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintfull</const>
+    </edit>
+	<edit name="rgba" mode="assign">
+	  <const>none</const>
+	</edit>
+  </match>
+
+  <match target="pattern">
+    <test name="family" compare="contains">
+      <string>HiraginoSans-Mono-W6</string>
+      <string>HiraginoSans-W6</string>
+    </test>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>false</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintnone</const>
+    </edit>
+    <edit name="rgba" mode="assign">
+      <const>none</const>
+    </edit>
+  </match>
 
 </fontconfig>
