--- a/conf.local/common.conf
+++ b/conf.local/common.conf
@@ -7,21 +7,14 @@
   <!-- Target dots per inch -->
   <match target="pattern">
     <edit name="dpi" mode="assign">
-      <double>104</double>
-    </edit>
-  </match>
-
-  <!-- Sub-pixel rendering, 'none' for CRT -->
-  <match target="font">
-    <edit name="rgba" mode="assign">
-      <const>none</const>
+      <double>101</double>
     </edit>
   </match>
 
   <!-- lcdfilter -->
   <match target="font">
 	<edit name="lcdfilter" mode="assign">
-	  <const>lcdnone</const>
+	  <const>lcddefault</const>
 	</edit>
   </match>
 
