--- a/conf.local/families.conf
+++ b/conf.local/families.conf
@@ -7,31 +7,31 @@
   <!-- sans-serif -->
   <alias>
     <family>sans-serif</family>
-    <prefer>
-      <family>DejaVu Sans</family>
+	<prefer>
+	  <family>DejaVu Sans</family>
 	  <family>Bitstream Vera Sans</family>
-      <family>Microsoft YaHei</family>
-    </prefer>
+      <family>WenQuanYi Micro Hei</family>
+	</prefer>
   </alias>
 
   <!-- serif -->
   <alias>
     <family>serif</family>
-    <prefer>
-      <family>DejaVu Serif</family>
+	<prefer>
+	  <family>DejaVu Serif</family>
 	  <family>Bitstream Vera Serif</family>
-      <family>WenQuanYi Micro Hei</family>
-    </prefer>
+      <family>STHeiti</family>
+	</prefer>
   </alias>
 
   <!-- monospace -->
   <alias>
     <family>monospace</family>
-    <prefer>
+	<prefer>
 	  <family>DejaVu Sans Mono</family>
 	  <family>Bitstream Vera Sans Mono</family>
       <family>WenQuanYi Micro Hei Mono</family>
-    </prefer>
+	</prefer>
   </alias>
 
   <!-- cursive -->
@@ -39,10 +39,6 @@
     <family>cursive</family>
 	<prefer>
 	  <family>Rocket Script</family>
-	  <family>Fill Meijer</family>
-      <family>AR PL UMing CN</family>
-      <family>AR PL UMing HK</family>
-      <family>AR PL UMing TW</family>
 	</prefer>
   </alias>
 
@@ -51,10 +47,6 @@
     <family>fantasy</family>
 	<prefer>
       <family>Minya Nouvelle</family>
-	  <family>Orbitron</family>
-      <family>AR PL UKai CN</family>
-      <family>AR PL UKai HK</family>
-      <family>AR PL UKai TW</family>
 	</prefer>
   </alias>
 
