--- a/conf.local/substitutes.conf
+++ b/conf.local/substitutes.conf
@@ -6,114 +6,56 @@
 
   <!-- Songti -->
   <match target="pattern">
-    <test name="family">
+    <test qual="any" name="family">
       <string>新宋体</string>
       <string>新宋體</string>
     </test>
     <edit name="family" mode="assign">
-      <string>AR PL UMing CN</string>
+      <string>STSong</string>
     </edit>
   </match>
 
   <match target="pattern">
-    <test name="family">
+    <test qual="any" name="family">
       <string>宋体</string>
       <string>宋體</string>
     </test>
     <edit name="family" mode="assign">
-      <string>AR PL UMing CN</string>
+      <string>STSong</string>
     </edit>
   </match>
   <!-- Songti -->
 
   <!-- Fangsongti -->
   <match target="pattern">
-    <test name="family">
+    <test qual="any" name="family">
       <string>仿宋体</string>
       <string>仿宋體</string>
     </test>
     <edit name="family" mode="assign">
-      <string>AR PL UKai CN</string>
+      <string>STZhongsong</string>
     </edit>
   </match>
 
-  <!-- CJK: latin fonts -->
+  <!-- Kaiti -->
   <match target="pattern">
-    <test name="family">
-      <string>AR PL UMing CN</string>
+    <test qual="any" name="family">
+      <string>楷体</string>
+      <string>楷體</string>
     </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Cantarell</string>
+    <edit name="family" mode="assign">
+      <string>STZhongsong</string>
     </edit>
   </match>
 
   <match target="pattern">
-    <test name="family">
-      <string>AR PL UKai CN</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Iwona</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test name="family">
+	<test qual="any" name="family">
 	  <string>黑体</string>
-	  <string>黒体</string>
-	  <string>SimHei</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Arial Black</string>
-    </edit>
-  </match>
-
-  <!-- Latin fonts -->
-  <match target="pattern">
-    <test name="family" qual="any">
-      <string>DejaVu Sans</string>
-    </test>
-    <test name="pixelsize" compare="more_eq">
-      <double>18</double>
-    </test>
-    <edit name="family" mode="assign">
-      <string>DejaVu Sans Condensed</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test name="family" qual="any">
-      <string>DejaVu Serif</string>
-    </test>
-    <test name="pixelsize" compare="more_eq">
-      <double>18</double>
-    </test>
-    <edit name="family" mode="assign">
-      <string>DejaVu Serif Condensed</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test name="family" qual="any">
-      <string>Iwona</string>
-    </test>
-    <test name="pixelsize" compare="more_eq">
-      <double>18</double>
-    </test>
-    <edit name="family" mode="assign">
-      <string>Iwona Condensed</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
-    <test name="family" qual="any">
-      <string>Ubuntu</string>
-    </test>
-    <test name="pixelsize" compare="more_eq">
-      <double>18</double>
-    </test>
-    <edit name="family" mode="assign">
-      <string>Ubuntu Condensed</string>
-    </edit>
+	  <string>黑體</string>
+	</test>
+	<edit name="family" mode="assign">
+	  <string>HiraginoSans-W6</string>
+	</edit>
   </match>
 
 </fontconfig>
